# EasyZX

./: .gitignore  CMakeLists.txt  EasyZX.slnx  EasyZX.vcxproj  EasyZX.vcxproj.filters  LICENSE  display.cpp  display.h  win_app.cpp  win_app.h
glad/include/glad/: gl.h  wgl.h
src/: audio.cpp  audio.h  display.cpp  display.h  settings.cpp  settings.h  shader.cpp  shader.h  win_app.cpp  win_app.h
src/libs/ImGui/: imconfig.h
src/libs/audio_filters/: dc_adjustment_filter.cpp  dc_adjustment_filter.h
src/libs/glad/include/glad/: gl.h  wgl.h
src/resources/: resources.h  resources.rc
src/resources/shaders/: crt.frag  crt.vert  screen.frag  sharp.frag  sharp.vert
src/spectrum/: main.cpp  main.h
src/spectrum/components/: beeper.cpp  beeper.h  io.cpp  io.h  memory.cpp  memory.h  ula.cpp  ula.h  z80.cpp  z80.h  z80_macros.h  z80_ops.h  z80_ops_ddfd.h  z80_ops_ed.h  z80ops.cpp  z80ops_cb.cpp  z80ops_ddfd.cpp  z80ops_ddfd_cb.cpp  z80ops_ed.cpp
src/spectrum/devices/: ay_3_8912.cpp  ay_3_8912.h  beta_disk.cpp  beta_disk.h  tape.cpp  tape.h  wd1793.cpp  wd1793.h  wd_1793.cpp  wd_1793.h
src/ui/: realtime.cpp  realtime.h  realtime_monitor.cpp  realtime_monitor.h
